# eDO_description

./: CMakeLists.txt  README.md  edo.rviz  package.xml
config/: joint_names_edo_sim.yaml
launch/: display.launch  edo_upload.launch  gazebo.launch  test.launch
meshes/: base_spacer.stl  link_6.stl
meshes/collision/: base_link.stl  base_spacer.stl  link_0.dae  link_1.dae  link_1.stl  link_2.dae  link_2.stl  link_3.dae  link_3.stl  link_4.dae  link_4.stl  link_5.dae  link_5.stl  link_6.dae  link_6.stl
meshes/visual/: base_spacer.stl  link_0.dae  link_1.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae  link_6.stl
robots/: edo_sim.urdf
urdf/: edo.gazebo.xacro  edo.transmission.xacro  edo.urdf.xacro  edo.xacro  materials.xacro  utilities.xacro
