<package>
  <name>edo_description</name>
  <version>0.1.0</version>
  <description>
    <p>URDF Description package for eDO Robot</p>
    <p>This package contains configuration data, 3D models and launch files
for edo_sim robot</p>
  </description>
  <author email="ludus.russo@gmail.com">Ludovico Russo</author>
  <maintainer email="community@eDO.cloud" > </maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>
